include/operators.h

ORTKI_API(ortki::OrtKITensor *) ortki_Abs(ortki::OrtKITensor * X);
ORTKI_API(ortki::OrtKITensor *) ortki_Acos(ortki::OrtKITensor * input);
ORTKI_API(ortki::OrtKITensor *) ortki_Acosh(ortki::OrtKITensor * input);
ORTKI_API(ortki::OrtKITensor *) ortki_Add(ortki::OrtKITensor * A, ortki::OrtKITensor * B);
ORTKI_API(ortki::OrtKITensor *) ortki_And(ortki::OrtKITensor * A, ortki::OrtKITensor * B);
ORTKI_API(ortki::OrtKITensor *) ortki_ArgMax(ortki::OrtKITensor * data, int64_t axis, int64_t keepdims, int64_t select_last_index);
ORTKI_API(ortki::OrtKITensor *) ortki_ArgMin(ortki::OrtKITensor * data, int64_t axis, int64_t keepdims, int64_t select_last_index);
ORTKI_API(ortki::OrtKITensor *) ortki_Asin(ortki::OrtKITensor * input);
ORTKI_API(ortki::OrtKITensor *) ortki_Asinh(ortki::OrtKITensor * input);
ORTKI_API(ortki::OrtKITensor *) ortki_Atan(ortki::OrtKITensor * input);
ORTKI_API(ortki::OrtKITensor *) ortki_Atanh(ortki::OrtKITensor * input);
ORTKI_API(ortki::OrtKITensor *) ortki_AveragePool(ortki::OrtKITensor * X, const char* auto_pad, int64_t ceil_mode, int64_t count_include_pad, int64_t* kernel_shape, int kernel_shape_size, int64_t* pads, int pads_size, int64_t* strides, int strides_size);
ORTKI_API(ortki::OrtKITensor *) ortki_BitShift(ortki::OrtKITensor * X, ortki::OrtKITensor * Y, const char* direction);
ORTKI_API(ortki::OrtKITensor *) ortki_Cast(ortki::OrtKITensor * input, int64_t to);
ORTKI_API(ortki::OrtKITensor *) ortki_Ceil(ortki::OrtKITensor * X);
ORTKI_API(ortki::OrtKITensor *) ortki_Celu(ortki::OrtKITensor * X, float alpha);
ORTKI_API(ortki::OrtKITensor *) ortki_Clip(ortki::OrtKITensor * input, ortki::OrtKITensor * min, ortki::OrtKITensor * max);
ORTKI_API(ortki::OrtKITensor *) ortki_Compress(ortki::OrtKITensor * input, ortki::OrtKITensor * condition, int64_t axis);
ORTKI_API(ortki::OrtKITensor *) ortki_Concat(ortki::OrtKITensor ** inputs, int input_size, int64_t axis);
ORTKI_API(ortki::OrtKITensor *) ortki_ConcatFromSequence(ortki::OrtKITensor ** input_sequence, int input_size, int64_t axis, int64_t new_axis);
ORTKI_API(ortki::OrtKITensor *) ortki_Conv(ortki::OrtKITensor * X, ortki::OrtKITensor * W, ortki::OrtKITensor * B, const char* auto_pad, int64_t* dilations, int dilations_size, int64_t group, int64_t* kernel_shape, int kernel_shape_size, int64_t* pads, int pads_size, int64_t* strides, int strides_size);
ORTKI_API(ortki::OrtKITensor *) ortki_ConvInteger(ortki::OrtKITensor * x, ortki::OrtKITensor * w, ortki::OrtKITensor * x_zero_point, ortki::OrtKITensor * w_zero_point, const char* auto_pad, int64_t* dilations, int dilations_size, int64_t group, int64_t* kernel_shape, int kernel_shape_size, int64_t* pads, int pads_size, int64_t* strides, int strides_size);
ORTKI_API(ortki::OrtKITensor *) ortki_ConvTranspose(ortki::OrtKITensor * X, ortki::OrtKITensor * W, ortki::OrtKITensor * B, const char* auto_pad, int64_t* dilations, int dilations_size, int64_t group, int64_t* kernel_shape, int kernel_shape_size, int64_t* output_padding, int output_padding_size, int64_t* output_shape, int output_shape_size, int64_t* pads, int pads_size, int64_t* strides, int strides_size);
ORTKI_API(ortki::OrtKITensor *) ortki_Cos(ortki::OrtKITensor * input);
ORTKI_API(ortki::OrtKITensor *) ortki_Cosh(ortki::OrtKITensor * input);
ORTKI_API(ortki::OrtKITensor *) ortki_CumSum(ortki::OrtKITensor * x, ortki::OrtKITensor * axis, int64_t exclusive, int64_t reverse);
ORTKI_API(ortki::OrtKITensor *) ortki_DepthToSpace(ortki::OrtKITensor * input, int64_t blocksize, const char* mode);
ORTKI_API(ortki::OrtKITensor *) ortki_DequantizeLinear(ortki::OrtKITensor * x, ortki::OrtKITensor * x_scale, ortki::OrtKITensor * x_zero_point, int64_t axis);
ORTKI_API(ortki::OrtKITensor *) ortki_Det(ortki::OrtKITensor * X);
ORTKI_API(ortki::OrtKITensor *) ortki_Div(ortki::OrtKITensor * A, ortki::OrtKITensor * B);
ORTKI_API(ortki::OrtKITensorSeq *) ortki_Dropout(ortki::OrtKITensor * data, ortki::OrtKITensor * ratio, ortki::OrtKITensor * training_mode, int64_t seed);
ORTKI_API(ortki::OrtKITensorSeq *) ortki_DynamicQuantizeLinear(ortki::OrtKITensor * x);
ORTKI_API(ortki::OrtKITensor *) ortki_Einsum(ortki::OrtKITensor ** Inputs, int input_size, const char* equation);
ORTKI_API(ortki::OrtKITensor *) ortki_Elu(ortki::OrtKITensor * X, float alpha);
ORTKI_API(ortki::OrtKITensor *) ortki_Equal(ortki::OrtKITensor * A, ortki::OrtKITensor * B);
ORTKI_API(ortki::OrtKITensor *) ortki_Erf(ortki::OrtKITensor * input);
ORTKI_API(ortki::OrtKITensor *) ortki_Exp(ortki::OrtKITensor * input);
ORTKI_API(ortki::OrtKITensor *) ortki_Expand(ortki::OrtKITensor * input, ortki::OrtKITensor * shape);
ORTKI_API(ortki::OrtKITensor *) ortki_EyeLike(ortki::OrtKITensor * input, int64_t dtype, int64_t k);
ORTKI_API(ortki::OrtKITensor *) ortki_Flatten(ortki::OrtKITensor * input, int64_t axis);
ORTKI_API(ortki::OrtKITensor *) ortki_Floor(ortki::OrtKITensor * X);
ORTKI_API(ortki::OrtKITensorSeq *) ortki_GRU(ortki::OrtKITensor * X, ortki::OrtKITensor * W, ortki::OrtKITensor * R, ortki::OrtKITensor * B, ortki::OrtKITensor * sequence_lens, ortki::OrtKITensor * initial_h, float* activation_alpha, int activation_alpha_size, float* activation_beta, int activation_beta_size, const char** activations, int activations_size, float clip, const char* direction, int64_t hidden_size, int64_t layout, int64_t linear_before_reset);
ORTKI_API(ortki::OrtKITensor *) ortki_Gather(ortki::OrtKITensor * data, ortki::OrtKITensor * indices, int64_t axis);
ORTKI_API(ortki::OrtKITensor *) ortki_GatherElements(ortki::OrtKITensor * data, ortki::OrtKITensor * indices, int64_t axis);
ORTKI_API(ortki::OrtKITensor *) ortki_GatherND(ortki::OrtKITensor * data, ortki::OrtKITensor * indices, int64_t batch_dims);
ORTKI_API(ortki::OrtKITensor *) ortki_Gemm(ortki::OrtKITensor * A, ortki::OrtKITensor * B, ortki::OrtKITensor * C, float alpha, float beta, int64_t transA, int64_t transB);
ORTKI_API(ortki::OrtKITensor *) ortki_GlobalAveragePool(ortki::OrtKITensor * X);
ORTKI_API(ortki::OrtKITensor *) ortki_GlobalLpPool(ortki::OrtKITensor * X, int64_t p);
ORTKI_API(ortki::OrtKITensor *) ortki_GlobalMaxPool(ortki::OrtKITensor * X);
ORTKI_API(ortki::OrtKITensor *) ortki_Greater(ortki::OrtKITensor * A, ortki::OrtKITensor * B);
ORTKI_API(ortki::OrtKITensor *) ortki_GreaterOrEqual(ortki::OrtKITensor * A, ortki::OrtKITensor * B);
ORTKI_API(ortki::OrtKITensor *) ortki_HardSigmoid(ortki::OrtKITensor * X, float alpha, float beta);
ORTKI_API(ortki::OrtKITensor *) ortki_HardSwish(ortki::OrtKITensor * X);
ORTKI_API(ortki::OrtKITensor *) ortki_Hardmax(ortki::OrtKITensor * input, int64_t axis);
ORTKI_API(ortki::OrtKITensor *) ortki_Identity(ortki::OrtKITensor * input);
ORTKI_API(ortki::OrtKITensor *) ortki_InstanceNormalization(ortki::OrtKITensor * input, ortki::OrtKITensor * scale, ortki::OrtKITensor * B, float epsilon);
ORTKI_API(ortki::OrtKITensor *) ortki_IsInf(ortki::OrtKITensor * X, int64_t detect_negative, int64_t detect_positive);
ORTKI_API(ortki::OrtKITensor *) ortki_IsNaN(ortki::OrtKITensor * X);
ORTKI_API(ortki::OrtKITensor *) ortki_LRN(ortki::OrtKITensor * X, float alpha, float beta, float bias, int64_t size);
ORTKI_API(ortki::OrtKITensor *) ortki_LeakyRelu(ortki::OrtKITensor * X, float alpha);
ORTKI_API(ortki::OrtKITensor *) ortki_Less(ortki::OrtKITensor * A, ortki::OrtKITensor * B);
ORTKI_API(ortki::OrtKITensor *) ortki_LessOrEqual(ortki::OrtKITensor * A, ortki::OrtKITensor * B);
ORTKI_API(ortki::OrtKITensor *) ortki_Log(ortki::OrtKITensor * input);
ORTKI_API(ortki::OrtKITensor *) ortki_LogSoftmax(ortki::OrtKITensor * input, int64_t axis);
ORTKI_API(ortki::OrtKITensor *) ortki_LpNormalization(ortki::OrtKITensor * input, int64_t axis, int64_t p);
ORTKI_API(ortki::OrtKITensor *) ortki_LpPool(ortki::OrtKITensor * X, const char* auto_pad, int64_t* kernel_shape, int kernel_shape_size, int64_t p, int64_t* pads, int pads_size, int64_t* strides, int strides_size);
ORTKI_API(ortki::OrtKITensor *) ortki_MatMul(ortki::OrtKITensor * A, ortki::OrtKITensor * B);
ORTKI_API(ortki::OrtKITensor *) ortki_MatMulInteger(ortki::OrtKITensor * A, ortki::OrtKITensor * B, ortki::OrtKITensor * a_zero_point, ortki::OrtKITensor * b_zero_point);
ORTKI_API(ortki::OrtKITensor *) ortki_Max(ortki::OrtKITensor ** data_0, int input_size);
ORTKI_API(ortki::OrtKITensorSeq *) ortki_MaxPool(ortki::OrtKITensor * X, const char* auto_pad, int64_t ceil_mode, int64_t* dilations, int dilations_size, int64_t* kernel_shape, int kernel_shape_size, int64_t* pads, int pads_size, int64_t storage_order, int64_t* strides, int strides_size);
ORTKI_API(ortki::OrtKITensor *) ortki_MaxRoiPool(ortki::OrtKITensor * X, ortki::OrtKITensor * rois, int64_t* pooled_shape, int pooled_shape_size, float spatial_scale);
ORTKI_API(ortki::OrtKITensor *) ortki_MaxUnpool(ortki::OrtKITensor * X, ortki::OrtKITensor * I, ortki::OrtKITensor * output_shape, int64_t* kernel_shape, int kernel_shape_size, int64_t* pads, int pads_size, int64_t* strides, int strides_size);
ORTKI_API(ortki::OrtKITensor *) ortki_Mean(ortki::OrtKITensor ** data_0, int input_size);
ORTKI_API(ortki::OrtKITensor *) ortki_MeanVarianceNormalization(ortki::OrtKITensor * X, int64_t* axes, int axes_size);
ORTKI_API(ortki::OrtKITensor *) ortki_Min(ortki::OrtKITensor ** data_0, int input_size);
ORTKI_API(ortki::OrtKITensor *) ortki_Mod(ortki::OrtKITensor * A, ortki::OrtKITensor * B, int64_t fmod);
ORTKI_API(ortki::OrtKITensor *) ortki_Mul(ortki::OrtKITensor * A, ortki::OrtKITensor * B);
ORTKI_API(ortki::OrtKITensor *) ortki_Multinomial(ortki::OrtKITensor * input, int64_t dtype, int64_t sample_size, float seed);
ORTKI_API(ortki::OrtKITensor *) ortki_Neg(ortki::OrtKITensor * X);
ORTKI_API(ortki::OrtKITensor *) ortki_NegativeLogLikelihoodLoss(ortki::OrtKITensor * input, ortki::OrtKITensor * target, ortki::OrtKITensor * weight, int64_t ignore_index, const char* reduction);
ORTKI_API(ortki::OrtKITensor *) ortki_NonMaxSuppression(ortki::OrtKITensor * boxes, ortki::OrtKITensor * scores, ortki::OrtKITensor * max_output_boxes_per_class, ortki::OrtKITensor * iou_threshold, ortki::OrtKITensor * score_threshold, int64_t center_point_box);