CSharp/OrtKISharp/Operators.cs

//This file is automatically generated from the onnx def files via tools/gen_operators.py.
using System.Runtime.InteropServices;

namespace OrtKISharp;

internal partial class Native
{
    [DllImport(LibraryName)]
    public static extern Tensor ortki_Abs(Tensor X);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_Acos(Tensor input);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_Acosh(Tensor input);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_Add(Tensor A, Tensor B);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_And(Tensor A, Tensor B);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_ArgMax(Tensor data, long axis, long keepdims, long select_last_index);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_ArgMin(Tensor data, long axis, long keepdims, long select_last_index);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_Asin(Tensor input);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_Asinh(Tensor input);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_Atan(Tensor input);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_Atanh(Tensor input);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_AveragePool(Tensor X, string auto_pad, long ceil_mode, long count_include_pad, long[] kernel_shape, nuint kernel_shape_size, long[] pads, nuint pads_size, long[] strides, nuint strides_size);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_Bernoulli(Tensor input, long dtype, float seed);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_BitShift(Tensor X, Tensor Y, string direction);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_BlackmanWindow(Tensor size, long output_datatype, long periodic);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_Cast(Tensor input, long to);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_CastLike(Tensor input, Tensor target_type);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_Ceil(Tensor X);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_Celu(Tensor X, float alpha);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_Clip(Tensor input, Tensor min, Tensor max);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_Compress(Tensor input, Tensor condition, long axis);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_Concat(IntPtr[] inputs, nuint input_size, long axis);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_ConcatFromSequence(IntPtr[] input_sequence, nuint input_size, long axis, long new_axis);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_Conv(Tensor X, Tensor W, Tensor B, string auto_pad, long[] dilations, nuint dilations_size, long group, long[] kernel_shape, nuint kernel_shape_size, long[] pads, nuint pads_size, long[] strides, nuint strides_size);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_ConvInteger(Tensor x, Tensor w, Tensor x_zero_point, Tensor w_zero_point, string auto_pad, long[] dilations, nuint dilations_size, long group, long[] kernel_shape, nuint kernel_shape_size, long[] pads, nuint pads_size, long[] strides, nuint strides_size);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_ConvTranspose(Tensor X, Tensor W, Tensor B, string auto_pad, long[] dilations, nuint dilations_size, long group, long[] kernel_shape, nuint kernel_shape_size, long[] output_padding, nuint output_padding_size, long[] output_shape, nuint output_shape_size, long[] pads, nuint pads_size, long[] strides, nuint strides_size);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_Cos(Tensor input);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_Cosh(Tensor input);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_CumSum(Tensor x, Tensor axis, long exclusive, long reverse);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_DFT(Tensor input, Tensor dft_length, long axis, long inverse, long onesided);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_DepthToSpace(Tensor input, long blocksize, string mode);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_DequantizeLinear(Tensor x, Tensor x_scale, Tensor x_zero_point, long axis);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_Det(Tensor X);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_Div(Tensor A, Tensor B);

    [DllImport(LibraryName)]
    public static extern TensorSeq ortki_Dropout(Tensor data, Tensor ratio, Tensor training_mode, long seed);

    [DllImport(LibraryName)]
    public static extern TensorSeq ortki_DynamicQuantizeLinear(Tensor x);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_Einsum(IntPtr[] Inputs, nuint input_size, string equation);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_Elu(Tensor X, float alpha);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_Equal(Tensor A, Tensor B);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_Erf(Tensor input);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_Exp(Tensor input);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_Expand(Tensor input, Tensor shape);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_EyeLike(Tensor input, long dtype, long k);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_Flatten(Tensor input, long axis);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_Floor(Tensor X);

    [DllImport(LibraryName)]
    public static extern TensorSeq ortki_GRU(Tensor X, Tensor W, Tensor R, Tensor B, Tensor sequence_lens, Tensor initial_h, float[] activation_alpha, nuint activation_alpha_size, float[] activation_beta, nuint activation_beta_size, string[] activations, nuint activations_size, float clip, string direction, long hidden_size, long layout, long linear_before_reset);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_Gather(Tensor data, Tensor indices, long axis);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_GatherElements(Tensor data, Tensor indices, long axis);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_GatherND(Tensor data, Tensor indices, long batch_dims);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_Gemm(Tensor A, Tensor B, Tensor C, float alpha, float beta, long transA, long transB);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_GlobalAveragePool(Tensor X);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_GlobalLpPool(Tensor X, long p);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_GlobalMaxPool(Tensor X);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_Greater(Tensor A, Tensor B);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_GreaterOrEqual(Tensor A, Tensor B);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_GridSample(Tensor X, Tensor grid, long align_corners, string mode, string padding_mode);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_HammingWindow(Tensor size, long output_datatype, long periodic);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_HannWindow(Tensor size, long output_datatype, long periodic);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_HardSigmoid(Tensor X, float alpha, float beta);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_HardSwish(Tensor X);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_Hardmax(Tensor input, long axis);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_Identity(Tensor input);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_InstanceNormalization(Tensor input, Tensor scale, Tensor B, float epsilon);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_IsInf(Tensor X, long detect_negative, long detect_positive);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_IsNaN(Tensor X);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_LRN(Tensor X, float alpha, float beta, float bias, long size);

    [DllImport(LibraryName)]
    public static extern TensorSeq ortki_LayerNormalization(Tensor X, Tensor Scale, Tensor B, long axis, float epsilon, long stash_type);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_LeakyRelu(Tensor X, float alpha);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_Less(Tensor A, Tensor B);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_LessOrEqual(Tensor A, Tensor B);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_Log(Tensor input);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_LogSoftmax(Tensor input, long axis);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_LpNormalization(Tensor input, long axis, long p);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_LpPool(Tensor X, string auto_pad, long[] kernel_shape, nuint kernel_shape_size, long p, long[] pads, nuint pads_size, long[] strides, nuint strides_size);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_MatMul(Tensor A, Tensor B);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_MatMulInteger(Tensor A, Tensor B, Tensor a_zero_point, Tensor b_zero_point);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_Max(IntPtr[] data_0, nuint input_size);

    [DllImport(LibraryName)]
    public static extern TensorSeq ortki_MaxPool(Tensor X, string auto_pad, long ceil_mode, long[] dilations, nuint dilations_size, long[] kernel_shape, nuint kernel_shape_size, long[] pads, nuint pads_size, long storage_order, long[] strides, nuint strides_size);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_MaxRoiPool(Tensor X, Tensor rois, long[] pooled_shape, nuint pooled_shape_size, float spatial_scale);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_MaxUnpool(Tensor X, Tensor I, Tensor output_shape, long[] kernel_shape, nuint kernel_shape_size, long[] pads, nuint pads_size, long[] strides, nuint strides_size);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_Mean(IntPtr[] data_0, nuint input_size);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_MeanVarianceNormalization(Tensor X, long[] axes, nuint axes_size);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_MelWeightMatrix(Tensor num_mel_bins, Tensor dft_length, Tensor sample_rate, Tensor lower_edge_hertz, Tensor upper_edge_hertz, long output_datatype);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_Min(IntPtr[] data_0, nuint input_size);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_Mod(Tensor A, Tensor B, long fmod);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_Mul(Tensor A, Tensor B);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_Multinomial(Tensor input, long dtype, long sample_size, float seed);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_Neg(Tensor X);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_NegativeLogLikelihoodLoss(Tensor input, Tensor target, Tensor weight, long ignore_index, string reduction);

    [DllImport(LibraryName)]
    public static extern Tensor ortki_NonMaxSuppression(Tensor boxes, Tensor scores, Tensor max_output_boxes_per_class, Tensor iou_threshold, Tensor score_threshold, long center_point_box);
